tests/dataset/tpc-ds/compiler/kotlin/q87.kt
// Generated by Mochi compiler v0.10.26 on 2025-07-15T07:18:55Z
fun sum(list: List<Any?>): Number {
    var s = 0.0
    var allInt = true
    for (n in list) {
        val d = toDouble(n)
        if (d % 1.0 != 0.0) allInt = false
        s += d
    }
    return if (allInt) s.toInt() else s
}

fun String.starts_with(prefix: String): Boolean = this.startsWith(prefix)

fun toDouble(v: Any?): Double = when (v) {
    is Double -> v
    is Int -> v.toDouble()
    is String -> v.toDouble()
    else -> 0.0
}

fun json(v: Any?) {
    println(toJson(v))
}

fun toJson(v: Any?): String = when (v) {
    null -> "null"
    is String -> "\"" + v.replace("\"", "\\\"") + "\""
    is Boolean, is Number -> v.toString()
    is Map<*, *> -> v.entries.joinToString(prefix = "{", postfix = "}") { toJson(it.key.toString()) + ":" + toJson(it.value) }
    is Iterable<*> -> v.joinToString(prefix = "[", postfix = "]") { toJson(it) }
    else -> toJson(v.toString())
}
// Code generated from q87.mochi

data class Catalog_sale(var cust: String)

data class Store_sale(var cust: String, var price: Double)

val store_sales = mutableListOf(Store_sale(cust = "A", price = 5.0), Store_sale(cust = "B", price = 30.0), Store_sale(cust = "C", price = 57.0))

val catalog_sales = mutableListOf(Catalog_sale(cust = "A"))

val web_sales = mutableListOf()

val store_customers = run {
    val __res = mutableListOf<String>()
    for (s in store_sales) {
        __res.add(s.cust)
    }
    __res
}

val catalog_customers = run {
    val __res = mutableListOf<String>()
    for (s in catalog_sales) {
        __res.add(s.cust)
    }
    __res
}

val web_customers = run {
    val __res = mutableListOf<Any?>()
    for (s in web_sales) {
        __res.add((s as MutableMap<*, *>)["cust"])
    }
    __res
}

val store_only = run {
    val __res = mutableListOf<Any?>()
    for (c in store_customers) {
        if (run {
    val __res = mutableListOf<String>()
    for (x in catalog_customers) {
        if (x == c) {
            __res.add(x)
        }
    }
    __res
}.size == 0 && run {
    val __res = mutableListOf<Any?>()
    for (x in web_customers) {
        if (x == c) {
            __res.add(x)
        }
    }
    __res
}.size == 0) {
            __res.add(c)
        }
    }
    __res
}

val result = sum(run {
    val __res = mutableListOf<Double>()
    for (s in store_sales) {
        if (run {
    val __res = mutableListOf<Any?>()
    for (x in store_only) {
        if (x == s.cust) {
            __res.add(x)
        }
    }
    __res
}.size > 0) {
            __res.add(s.price)
        }
    }
    __res
})

fun main() {
    json(result)
}
